Feature : add CRUD Member, add validation css

--- a/public/assets/css/style-cms.css
+++ b/public/assets/css/style-cms.css
@@ -22,6 +22,14 @@
     min-height: 100vh;
 }
 
+.invalid-feedback{
+    display: flex;
+    justify-content: end;
+    margin-top: -15px;
+    margin-bottom: 10px;
+    font-size: 12px;
+}
+
 /* Navbar */
 
 .navbar {
@@ -473,7 +481,7 @@
 .checkbox-point label{
     font-size: 12px;
     color: var(--text-gray);
-    margin-right: 45px;
+    margin-right: 10px;
 }
 
 /* Cashier End */
@@ -655,14 +663,14 @@
     .form-group select {
         max-width: 70%;
     }
-
-    .checkbox-point label{
-        margin-right: 65px;
-    }
     /* Cashier End */
 }
 
 @media (min-width: 992px) {
+
+    .invalid-feedback{
+        font-size: 16px;
+    }
 
     /* Navbar */
     .brand-wrapper__name {
@@ -919,7 +927,6 @@
 
     .checkbox-point label{
         font-size: 17px;
-        margin-right: 75px;
     }
 
     /* Cashier End */
