--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -95,9 +95,6 @@
 .login-btn {
     background-color: var(--primary-color);
     border-radius: 5px;
-}
-
-.login-btn a {
     text-decoration: none;
     color: var(--bg-white);
     font-size: 15px;
@@ -156,6 +153,10 @@
     padding: 10px;
 }
 
+.hero-description a {
+    text-decoration: none;
+}
+
 .hero-description__button {
     background-color: var(--secondary-color);
     padding: 5px 10px;
@@ -163,8 +164,7 @@
     border-radius: 5px;
 }
 
-.hero-description__button a {
-    text-decoration: none;
+.hero-description__button span {
     font-size: 12px;
     color: var(--bg-white);
 }
@@ -313,6 +313,10 @@ footer {
     margin: 35px 0;
 }
 
+.about-section a {
+    text-decoration: none;
+}
+
 .about-profile-image img {
     width: 100%;
     height: auto;
@@ -353,7 +357,7 @@ footer {
     border-radius: 5px;
 }
 
-.about-profile-description__button a {
+.about-profile-description__button span {
     text-decoration: none;
     font-size: 12px;
     color: var(--bg-white);
@@ -498,8 +502,9 @@ footer {
 }
 
 .profile-image {
-    max-width: 100px;
-    max-height: 100px;
+    width: 100px;
+    height: 100px;
+    margin: 10px 0;
 }
 
 .profile-name {
@@ -610,7 +615,7 @@ footer {
         font-size: 18px;
     }
 
-    .login-btn a {
+    .login-btn {
         font-size: 17px;
     }
 
@@ -688,7 +693,7 @@ footer {
         padding: 5px 15px;
     }
 
-    .about-profile-description__button a {
+    .about-profile-description__button span {
         font-size: 20px;
     }
 
@@ -773,7 +778,7 @@ footer {
         font-size: 20px;
     }
 
-    .login-btn a {
+    .login-btn{
         font-size: 19px;
     }
 
@@ -807,7 +812,7 @@ footer {
         padding: 5px 25px;
     }
 
-    .hero-description__button a {
+    .hero-description__button span {
         font-size: 20px;
     }
 
@@ -913,7 +918,7 @@ footer {
         padding: 5px 25px;
     }
 
-    .about-profile-description__button a {
+    .about-profile-description__button span {
         font-size: 25px;
     }
 
