--- a/public/assets/css/style-cms.css
+++ b/public/assets/css/style-cms.css
@@ -22,7 +22,7 @@
     min-height: 100vh;
 }
 
-.invalid-feedback{
+.invalid-feedback {
     display: flex;
     justify-content: end;
     margin-top: -15px;
@@ -106,8 +106,8 @@
 }
 
 .sidebar-header__avatar img {
-    max-height: 70px;
-    max-width: 70px;
+    height: 70px;
+    width: 70px;
 }
 
 .sidebar-header__user {
@@ -257,14 +257,12 @@
 .event-list .card-text {
     color: var(--text-gray);
     font-size: 10px;
-    margin: 5px auto;
 }
 
 .event-list .card-title {
     color: var(--text-gray);
     font-size: 14px;
     font-weight: 600;
-    margin-top: 10px;
 }
 
 /* Detail Event */
@@ -368,8 +366,8 @@
 }
 
 .dashboard-information__item {
-    max-width: 335px;
-    max-height: 195px;
+    /* max-width: 335px;
+    max-height: 195px; */
     background-color: var(--bg-white);
     padding: 25px 20px;
     border-radius: 10px;
@@ -478,10 +476,38 @@
     margin-top: 20px;
 }
 
-.checkbox-point label{
+.checkbox-point label {
     font-size: 12px;
     color: var(--text-gray);
     margin-right: 10px;
+}
+
+.order-price {
+    margin: 20px 0;
+}
+
+.order-price div p {
+    font-weight: 600;
+    padding: 0;
+    margin-bottom: 5px;
+    font-size: 12px;
+}
+
+.order-price .diskon {
+    color: green;
+}
+
+.total-price {
+    border-top: 2px solid var(--primary-color);
+    padding-left: 20px;
+    padding-top: 10px;
+    color: var(--primary-color);
+}
+
+.order-price div span {
+    margin: 0 10px;
+    font-weight: 500;
+    font-size: 12px;
 }
 
 /* Cashier End */
@@ -570,7 +596,7 @@
     }
 
     .event-list .card {
-        max-width: 260px;
+        max-width: 300px;
         max-height: 360px;
         margin: 10px;
     }
@@ -581,7 +607,6 @@
 
     .event-list .card-title {
         font-size: 14px;
-        margin-top: 10px;
     }
 
     /* Index */
@@ -632,6 +657,7 @@
 
     .dashboard-information__item {
         padding: 40px 30px;
+        margin-right: 5px;
     }
 
     .dashboard-information__item-image {
@@ -652,6 +678,7 @@
         font-size: 15px;
         margin: 0;
     }
+
     /* Super Admin End */
 
 
@@ -663,12 +690,13 @@
     .form-group select {
         max-width: 70%;
     }
+
     /* Cashier End */
 }
 
 @media (min-width: 992px) {
 
-    .invalid-feedback{
+    .invalid-feedback {
         font-size: 16px;
     }
 
@@ -780,7 +808,6 @@
 
     .event-list .card-title {
         font-size: 16px;
-        margin-top: 10px;
     }
 
     /* Detail Event */
@@ -925,7 +952,20 @@
         margin-top: 20px;
     }
 
-    .checkbox-point label{
+    .checkbox-point label {
+        font-size: 17px;
+    }
+
+    .order-price div p {
+        font-size: 17px;
+    }
+
+    .total-price {
+        padding-left: 20px;
+    }
+
+    .order-price div span {
+        margin: 0 10px;
         font-size: 17px;
     }
 
