--- a/public/assets/css/style-cms.css
+++ b/public/assets/css/style-cms.css
@@ -510,6 +510,15 @@
     font-size: 12px;
 }
 
+.show-btn {
+    border: 0;
+    background-color: transparent;
+    position: absolute;
+    right: 0.5rem;
+    top: 0.5rem;
+    font-size: 12px;
+}
+
 /* Cashier End */
 
 /* Media Query */
@@ -689,6 +698,12 @@
 
     .form-group select {
         max-width: 70%;
+    }
+
+    .show-btn {
+        right: 0.9rem;
+        top: 0.4rem;
+        font-size: 14px;
     }
 
     /* Cashier End */
@@ -967,6 +982,12 @@
     .order-price div span {
         margin: 0 10px;
         font-size: 17px;
+    }
+
+    .show-btn {
+        right: 1rem;
+        top: 0.6rem;
+        font-size: 16px;
     }
 
     /* Cashier End */
