--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -599,6 +599,15 @@ footer {
     margin-bottom: 20px;
 }
 
+.show-btn {
+    border: 0;
+    background-color: transparent;
+    position: absolute;
+    right: 0.5rem;
+    top: 2.3rem;
+    font-size: 12px;
+}
+
 
 /* Media Query */
 
@@ -768,6 +777,12 @@ footer {
 
     .aside-event__title {
         font-size: 20px;
+    }
+
+    .show-btn {
+        right: 0.8rem;
+        top: 2.2rem;
+        font-size: 16px;
     }
 }
 
@@ -1071,5 +1086,11 @@ footer {
         font-size: 20px;
         padding: 5px 20px;
         margin-bottom: 20px;
+    }
+
+    .show-btn {
+        right: 1rem;
+        top: 2.8rem;
+        font-size: 16px;
     }
 }
